added final configuration of swagger. wip to do all endpoints documentation
